tests/textual/error/listData.uplc
(program 0.0.0 [(builtin listData) (con data { Integer 0 })] )
